fix: 空指针异常